--- a/css/temp.css
+++ b/css/temp.css
@@ -1,4 +1,39 @@
 /* YOUR CUSTOM STYLES */
+body {
+    background: #ddd;
+    color:#000;
+}
+.swiper-container {
+    width: 100%;
+    height: 300px;
+    margin: 20px auto;
+}
+.swiper-slide {
+    text-align: center;
+    background: #fff;
+    width: 60%;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+.swiper-slide:nth-child(2n) {
+    width: 40%;
+}
+.swiper-slide:nth-child(3n) {
+    width: 20%;
+}
+
 /* Small screen sm: 576px,*/
 @media only screen and (max-width: 576px) { 
 	.switch-to-side-a{
@@ -17,3 +52,5 @@
 /*Extra large screen xl: 1200px*/
 @media only screen and (min-width: 1200px) { 
 }
+
+
